--- a/docs/pages/admin-guides/access-controls/guides/locking.mdx
+++ b/docs/pages/admin-guides/access-controls/guides/locking.mdx
@@ -194,51 +194,27 @@ the last known locks. This decision strategy is encoded as one of the two modes:
 
 The cluster-wide mode defaults to `best_effort`. You can set up the default
 locking mode via API or CLI using a `cluster_auth_preference` resource or static
-configuration file:
+configuration file.
 
-<Tabs>
-  <TabItem label="API or CLI">
+If your Auth Service configuration (`/etc/teleport.yaml` by default) contains
+an `auth_service.authentication` section, edit the Teleport configuration
+file to contain the following:
 
-    Create a YAML file called `cap.yaml` or get the existing file using
-    `tctl get cap`.
+```yaml
+auth_service:
+    authentication:
+        locking_mode: best_effort
+```
 
-    ```yaml
-    kind: cluster_auth_preference
-    metadata:
-      name: cluster-auth-preference
-    spec:
-      locking_mode: best_effort
-    version: v2
-    ```
+Restart or redeploy the Auth Service for the change to take effect.
 
-    Create a resource:
+If not, edit your cluster authentication preference resource: 
 
-    ```code
-    $ tctl create -f cap.yaml
-    # cluster auth preference has been updated
-    ```
-  </TabItem>
-  <TabItem label="Static Config">
-    Edit `/etc/teleport.yaml` on the Auth Server:
+```code
+$ tctl edit cap
+```
 
-    ```yaml
-    auth_service:
-        authentication:
-            locking_mode: best_effort
-    ```
-
-    Restart the Auth Server for the change to take effect.
-  </TabItem>
-</Tabs>
-
-</TabItem>
-<TabItem scope={["Enterprise"]} label="Teleport Enterprise">
-
-The cluster-wide mode defaults to `best_effort`. You can set up the default
-locking mode via API or CLI using a `cluster_auth_preference` resource:
-
-Create a YAML file called `cap.yaml` or get the existing file using
-`tctl get cap`.
+Adjust the file in your editor to include the following:
 
 ```yaml
 kind: cluster_auth_preference
@@ -249,15 +225,32 @@ spec:
 version: v2
 ```
 
-Create a resource:
-
-```code
-$ tctl create -f cap.yaml
-# cluster auth preference has been updated
-```
+Save and close your editor to apply your changes.
 
 </TabItem>
+<TabItem scope={["Enterprise"]} label="Teleport Enterprise (Cloud)">
 
+The cluster-wide mode defaults to `best_effort`. You can set up the default
+locking mode via API or CLI using a `cluster_auth_preference` resource:
+
+```code
+$ tctl edit cap
+```
+
+Adjust the file in your editor to include the following:
+
+```yaml
+kind: cluster_auth_preference
+metadata:
+  name: cluster-auth-preference
+spec:
+  locking_mode: best_effort
+version: v2
+```
+
+Save and close your editor to apply your changes.
+
+</TabItem>
 </Tabs>
 
 It is also possible to configure the locking mode for a particular role:
